# flask-ci-cd-demo

./: Dockerfile  Jenkinsfile  Jenkinsfilekk  app.py  dev.yml  jeninsfile  prod.yml  pyproject.toml  staging.yml
flask_ci_cd/: init.py
