[tool.poetry]
name = "flask-ci-cd-demo"
version = "0.1.0"
description = "simple flask"
packages = [{ iclude = "flask_ci_cd"}]
authors = ["megak <megak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
